[tool.poetry]
name = "meetup-ds-cba-2019"
version = "0.1.0"
description = "Notebooks and code for the Córdoba Data Science Meetup of 2019: \"Introduction to graph neural networks\""
authors = ["Cristian Cardellino <ccardellino@unc.edu.ar>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.0"
networkx = "^2.4"
numpy = "^1.18.1"
scipy = "^1.4.1"
tensorflow = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
